--- a/package.json
+++ b/package.json
@@ -8,7 +8,43 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^2.0.6",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.0",
+    "bootstrap-vue": "^2.21.2",
+    "cache-loader": "^4.1.0",
     "core-js": "^3.6.5",
+    "datatables.net-autofill-bs4": "^2.3.9",
+    "datatables.net-bs4": "^1.11.3",
+    "datatables.net-buttons-bs4": "^2.1.1",
+    "datatables.net-colreorder-bs4": "^1.5.5",
+    "datatables.net-datetime": "^1.1.1",
+    "datatables.net-fixedheader-bs4": "^3.2.1",
+    "datatables.net-keytable-bs4": "^2.6.4",
+    "datatables.net-responsive-bs4": "^2.2.9",
+    "datatables.net-rowgroup-bs4": "^1.1.4",
+    "datatables.net-scroller-bs4": "^2.0.5",
+    "datatables.net-searchbuilder-bs4": "^1.3.0",
+    "datatables.net-searchpanes-bs4": "^1.4.0",
+    "jquery": "^3.6.0",
+    "jszip": "^3.7.1",
+    "pdfmake": "^0.2.4",
+    "secure-ls": "^1.2.6",
+    "vue-axios": "^3.3.7",
+    "vue-axios-cors": "^1.0.1",
+    "vue-loader": "^15.9.8",
+    "vue-paypal-checkout": "^3.2.0",
+    "vue-resource": "^1.5.3",
+    "vue-session": "^1.0.0",
+    "vue-simple-alert": "^1.1.1",
+    "vue-star-rating": "^1.7.0",
+    "vue-step-progress": "^0.3.7",
+    "vue-tree-navigation": "^4.0.1",
+    "vue2-google-maps": "^0.10.7",
+    "vuejs-loading-screen": "^1.10.1",
+    "vuex-persistedstate": "^4.1.0",
     "register-service-worker": "^1.7.1",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
