--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "jquery": "^3.6.0",
     "jszip": "^3.7.1",
     "pdfmake": "^0.2.4",
+    "register-service-worker": "^1.7.1",
     "secure-ls": "^1.2.6",
+    "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
     "vue-axios-cors": "^1.0.1",
+    "vue-ctk-date-time-picker": "^2.5.0",
     "vue-loader": "^15.9.8",
     "vue-paypal-checkout": "^3.2.0",
     "vue-resource": "^1.5.3",
+    "vue-router": "^3.2.0",
     "vue-session": "^1.0.0",
     "vue-simple-alert": "^1.1.1",
     "vue-star-rating": "^1.7.0",
@@ -44,11 +48,8 @@
     "vue-tree-navigation": "^4.0.1",
     "vue2-google-maps": "^0.10.7",
     "vuejs-loading-screen": "^1.10.1",
-    "vuex-persistedstate": "^4.1.0",
-    "register-service-worker": "^1.7.1",
-    "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
