--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pdfmake": "^0.2.4",
     "register-service-worker": "^1.7.1",
     "secure-ls": "^1.2.6",
+    "serve": "^13.0.2",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
     "vue-axios-cors": "^1.0.1",
