--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@northwalker/vue-hotel-datepicker": "^2.0.7",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
@@ -40,6 +41,7 @@
     "vue-axios-cors": "^1.0.1",
     "vue-ctk-date-time-picker": "^2.5.0",
     "vue-hotel-datepicker": "^4.5.1",
+    "vue-hotel-datepicker2": "^1.0.15",
     "vue-loader": "^15.9.8",
     "vue-paypal-checkout": "^3.2.0",
     "vue-resource": "^1.5.3",
