--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "vue-loader": "^15.9.8",
     "vue-paypal-checkout": "^3.2.0",
     "vue-resource": "^1.5.3",
+    "vue-responsive-video-background-player": "^1.2.2",
     "vue-router": "^3.2.0",
     "vue-select2": "^0.2.6",
     "vue-session": "^1.0.0",
