--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/vue-fontawesome": "^2.0.6",
+    "@kouts/vue-modal": "^2.1.4",
     "@northwalker/vue-hotel-datepicker": "^2.0.7",
     "axios": "^0.21.4",
     "bootstrap": "^4.6.0",
