--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "vue-star-rating": "^1.7.0",
     "vue-step-progress": "^0.3.7",
     "vue-tree-navigation": "^4.0.1",
+    "vue2-daterange-picker": "^0.6.8",
     "vue2-google-maps": "^0.10.7",
     "vuejs-loading-screen": "^1.10.1",
     "vuex": "^3.4.0",
