--- a/backEnd/package.json
+++ b/backEnd/package.json
@@ -15,13 +15,17 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.1",
     "mongodb": "^4.1.2",
     "mongoose": "^6.0.6",
+    "razorpay": "^2.8.1",
     "request": "^2.88.2",
+    "shortid": "^2.2.16",
     "uuid": "^8.3.2",
     "vue-axios": "^3.3.7"
   },
