--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap-vue": "^2.21.2",
     "cache-loader": "^4.1.0",
     "core-js": "^3.6.5",
+    "crypto": "^1.0.1",
     "datatables.net-autofill-bs4": "^2.3.9",
     "datatables.net-bs4": "^1.11.3",
     "datatables.net-buttons-bs4": "^2.1.1",
@@ -34,14 +35,18 @@
     "emailjs-com": "^3.2.0",
     "jquery": "^3.6.0",
     "jszip": "^3.7.1",
+    "moment": "^2.29.1",
     "pdfmake": "^0.2.4",
+    "razorpay": "^2.8.1",
     "register-service-worker": "^1.7.1",
     "secure-ls": "^1.2.6",
     "serve": "^13.0.2",
+    "shortid": "^2.2.16",
     "vue": "^2.6.11",
     "vue-axios": "^3.3.7",
     "vue-axios-cors": "^1.0.1",
     "vue-ctk-date-time-picker": "^2.5.0",
+    "vue-google-pay": "^0.0.2",
     "vue-hotel-datepicker": "^4.5.1",
     "vue-hotel-datepicker2": "^1.0.15",
     "vue-loader": "^15.9.8",
